--- a/main.html
+++ b/main.html
@@ -13,15 +13,23 @@
     </header>
     <section id="whatcrm">
         <h1>Что такое CRM система ?</h1>
-        <p></p>
+        <p> 
+            СРМ система помогает эффективнее управлять системой
+            СРМ система помогает эффективнее управлять системой
+            СРМ система помогает эффективнее управлять системой
+            СРМ система помогает эффективнее управлять системой
+            СРМ система помогает эффективнее управлять системой
+            СРМ система помогает эффективнее управлять системой
+            СРМ система помогает эффективнее управлять системой
+            СРМ система помогает эффективнее управлять системой
+            СРМ система помогает эффективнее управлять системой
+            СРМ система помогает эффективнее управлять системой
+            СРМ система помогает эффективнее управлять системой
+        </p>
     </section>
-    <section>
-        <div>
+    <section id="test">
             <h1>Какая CRM система вам нужна ?</h1>
-            <div>
-                <h2>Вопрос 1. Какая CRM система вм нужна ?</h2>
-            </div>  
-        </div>
+            <button>ТЕСТ</button>
     </section>
     <section>
         <h1>Какие существуют CRM системы ?</h1>
@@ -32,7 +40,7 @@
         <button></button>
     </section>
     <footer>
-        <h3></h3>
+        <h3>Контакты : +7888222111</h3>
     </footer>
 </body>
 </html>
