--- a/main.html
+++ b/main.html
@@ -31,13 +31,21 @@
             <h1>Какая CRM система вам нужна ?</h1>
             <button>ТЕСТ</button>
     </section>
-    <section>
+    <section id="states">
         <h1>Какие существуют CRM системы ?</h1>
         <div>
-            <img/>
-            <h2></h2>
+            <img alt="Image is not found"/>
+            <h2>ssss</h2>
         </div>
-        <button></button>
+        <div>
+            <img alt="Image is not found"/>
+            <h2>ssss</h2>
+        </div>
+        <div>
+            <img alt="Image is not found"/>
+            <h2>ssss</h2>
+        </div>
+        <button>Читать далее...</button>
     </section>
     <footer>
         <h3>Контакты : +7888222111</h3>
