--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <img alt="Image is not found"/>
             <h2>ssss</h2>
         </div>
-        <button>Читать далее...</button>
+        <a href="pages/states.html"><button>Читать далее...</button></a>
     </section>
     <footer>
         <h3>Контакты : +7888222111</h3>
